# BarkPack

./: .env.example  .gitignore  CONTRIBUTING-LLMS.md  Dockerfile  bunfig.toml  docker-compose.yml  package.json  pyproject.toml  turbo.json
bark-bot/: .env.example  .gitignore  README.md  docker-compose.yml  garage.toml  garage_keys.txt  google_workspace_docs.md  implementation_notes.md  main.py  package.json  pyproject.toml  railpack.toml  railway.toml  slack_manifest.yaml  test.txt  test_asyncpg_args.py  test_presigned.py  test_railway_db.py  test_railway_db_no_ssl.py  test_railway_db_psycopg.py  test_raw_asyncpg.py  test_s3.py  upload_env.py
bark-bot/app/agents/: bark_bot.yaml  base.py  coding_agent.yaml  data_analyst.yaml  google_workspace.yaml  knowledge_retriever.yaml  memory_summarizer.yaml  news.yaml  project_manager.yaml  software_engineer.yaml
bark-bot/app/api/: agents.py  dashboard.py  tools.py
bark-bot/app/core/: auth.py  context_compression.py  llm.py  orchestrator.py  s3_client.py
bark-bot/app/db/: models.py  session.py
bark-bot/app/memory/: history.py  profile.py  vector_store.py
bark-bot/app/models/: schemas.py  user.py
bark-bot/app/surfaces/: base.py  cli.py  slack.py  web.py
bark-bot/app/tools/: attachment_tools.py  base.py  core_tools.py  execution_tools.py  file_tools.py  github_tools.py  google_workspace_tools.py  handoff.py  image_tools.py  knowledge_tools.py  load_skill.py  memory_tools.py  news_tools.py  pdf_tools.py  railway_tools.py  registry.py  s3_tools.py  skill_tools.py  slack_tools.py  summarization_tools.py  tool_management.py  utils.py
bark-bot/app/tools/coding/: sandbox.py  sandbox_bash.py  sandbox_create.py  sandbox_diff.py  sandbox_edit.py  sandbox_git_commit.py  sandbox_git_push.py  sandbox_git_status.py  sandbox_glob.py  sandbox_grep.py  sandbox_list.py  sandbox_list_running.py  (+6 more)
bark-bot/garage-deploy/: Dockerfile
bark-bot/rustfs-deploy/: Dockerfile
bark-bot/scripts/: add_admin.py  generate_google_oauth_token.py  init_db.py  migrate_profile_data.py  setup_garage.sh  setup_rustfs.sh  test_weasyprint.py
bark-bot/tests/: test_context_compression.py  test_news_api.py  test_skill_sync.py
(+89 files in other folders)
